sumo/tests/traci/VariableSubscription/errors/UnknownVehicle/testclient.prog
simstep2 200
subscribevariable 212 x 0 1000 1 64
simstep2 0

